# UserStories

./: README.md
bug_races (102)/: info.txt
bug_races (102)/graphics/: graphics_buglike_people.txt  graphics_creatures_layered.txt  tile_page_ant_body_special.txt  tile_page_creatures.txt  tile_page_layered_corpses.txt
bug_races (102)/objects/: creature_ant_folk.txt  entity_ants.txt  inorganic_hive_wall.txt  reaction_ants.txt
duergar_module (10)/: info.txt
duergar_module (10)/graphics/: graphics_creatures_duergar.txt  graphics_creatures_interactions_duergar.txt  graphics_creatures_layered_corpse_duergar.txt  graphics_creatures_layered_statues.txt  graphics_creatures_portrait_duergar.txt  tile_page_duergar.txt  tile_page_layered_corpses_duergar.txt  tile_page_portraits_duergar.txt
duergar_module (10)/objects/: creature_standard_duergar.txt  entity_standard_duergar.txt
fortress_sim/: Cargo.toml
fortress_sim/crates/fortress/: Cargo.toml
fortress_sim/crates/fortress/src/: main.rs
mod_validator/: __main__.py  validator.py
mod_validator/tests/: test_validator.py
mods/hivemind_mod/: HIVEMIND_TODO_NL.txt  README.txt  info.txt
playable_naga (4)/: info.txt
playable_naga (4)/objects/: creature_animals_changed.txt  entity_playable_naga.txt
sm_cv_naga (3)/: info.txt
sm_cv_naga (3)/graphics/: graphics_naga.txt  graphics_naga_corpse.txt  graphics_naga_items.txt  graphics_naga_vanilla_patch.txt  tile_page_naga.txt
sm_cv_naga (3)/objects/: body_naga.txt  creature_naga.txt  entity_naga.txt  inorganic_naga.txt  item_naga.txt  (+2 more)
sm_naga_portraits (1)/: info.txt
(+23 files in other folders)
