[package]
name = "fortress"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "fortress"
path = "src/main.rs"

[dependencies]
macroquad = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"
rand = "0.8"
sim_core = { path = "../sim_core" }
world = { path = "../world" }
gameplay = { path = "../gameplay" }
persistence = { path = "../persistence" }
